src/test/resources/org/rust/ide/inspections/fixtures/duplicate_field.rs
struct S {
    foo: i32,
    <error descr="Duplicate field 'foo: String'">foo: String</error>,
}
